--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -85,8 +85,9 @@ body {
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground !important;
   }
+
 }
 
 
@@ -163,12 +164,5 @@ mark {
   @apply w-5 mr-2;
 }
 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
+
 
